# diceroll

./: Cargo.toml  README.md
src/: main.rs
src/roll/: lexer.rs  mod.rs  parser.rs  tokens.rs
src/roll/interpreter/: mod.rs  returns.rs  rolls.rs  variables.rs
