[package]
name = "diceroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
strum = "0.23.0"
strum_macros = "0.23.1"
